Prav/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
D:\bluej\lib\bluejcore.jar;D:\bluej\lib\junit-4.8.2.jar;D:\bluej\lib\userlib\pi4j-core.jar;D:\bluej\lib\userlib\pi4j-device.jar;D:\bluej\lib\userlib\pi4j-gpio-extension.jar;D:\bluej\lib\userlib\pi4j-service.jar;C:\Users\Pravin\Documents\Aousnik\Aousnik
-d
C:\Users\Pravin\Documents\Aousnik\Aousnik\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
D:\bluej\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Pravin\Documents\Aousnik\Aousnik\dat.java
<---- end of javadoc command ---->
Loading source file C:\Users\Pravin\Documents\Aousnik\Aousnik\dat.java...
C:\Users\Pravin\Documents\Aousnik\Aousnik\dat.java:40: error: ';' expected
        FileInputStream inn=new FileInputStream("Cust.dat"):
                                                           ^
C:\Users\Pravin\Documents\Aousnik\Aousnik\dat.java:69: error: class, interface, or enum expected
}
^
2 errors
